Made the carousel controls slide the set of thumbnails right or left

--- a/carousel-with-bottom-thumbnails/index.html
+++ b/carousel-with-bottom-thumbnails/index.html
@@ -23,8 +23,8 @@
           <div class="carousel-wbt__slide" data-filename="broad.jpg">
             <img src="./images/broad.jpg" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="broad2.jpg">
-            <img src="./images/broad2.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="guggenheim.jpg">
+            <img src="./images/guggenheim.jpg" class="carousel-wbt__image" />
           </div>
           <div class="carousel-wbt__slide" data-filename="dabney.jpg">
             <img src="./images/dabney.jpg" class="carousel-wbt__image" />
@@ -44,8 +44,8 @@
             <div class="carousel-wbt__thumbnail" data-filename="broad.jpg">
               <img src="./images/broad.jpg" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="broad2.jpg">
-              <img src="./images/broad2.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="guggenheim.jpg">
+              <img src="./images/guggenheim.jpg" class="carousel-wbt__thumbnail-image" />
             </div>
             <div class="carousel-wbt__thumbnail" data-filename="dabney.jpg">
               <img src="./images/dabney.jpg" class="carousel-wbt__thumbnail-image" />
