Example of image carousel with a tray of thumbnail images below

--- a/carousel-with-bottom-thumbnails/index.html
+++ b/carousel-with-bottom-thumbnails/index.html
@@ -9,52 +9,58 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <title>Hello, world!</title>
+    <title>Carousel with Bottom Thumbnails</title>
   </head>
   <body>
 
-    <div class="m-5">
+    <div class="m-5-md">
       <!-- 'carousel-wbt' is short for "Carousel with Bottom Thumbnails" -->
-      <div class="carousel-wbt">
+      <div class="carousel-wbt py-3 m-auto">
         <div class="carousel-wbt__main w-100">
-          <div class="carousel-wbt__slide active" data-filename="BI.jpg">
-            <img src="./images/BI.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide active" data-filename="0.png">
+            <img src="./images/0.png" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="broad.jpg">
-            <img src="./images/broad.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="60.png">
+            <img src="./images/60.png" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="guggenheim.jpg">
-            <img src="./images/guggenheim.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="90.png">
+            <img src="./images/90.png" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="dabney.jpg">
-            <img src="./images/dabney.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="150.png">
+            <img src="./images/150.png" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="frizbee.jpg">
-            <img src="./images/frizbee.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="210.png">
+            <img src="./images/210.png" class="carousel-wbt__image" />
           </div>
-          <div class="carousel-wbt__slide" data-filename="palms.jpg">
-            <img src="./images/palms.jpg" class="carousel-wbt__image" />
+          <div class="carousel-wbt__slide" data-filename="270.png">
+            <img src="./images/270.png" class="carousel-wbt__image" />
+          </div>
+          <div class="carousel-wbt__slide" data-filename="330.png">
+            <img src="./images/330.png" class="carousel-wbt__image" />
           </div>
         </div>
         <div class="carousel-wbt__thumbnail-wrapper">
           <div class="carousel-wbt__thumbnail-slider js-thumbnail-slider d-flex" style="transform: translateX(0);">
-            <div class="carousel-wbt__thumbnail active" data-filename="BI.jpg">
-              <img src="./images/BI.jpg" class="carousel-wbt__thumbnail-image active" />
+            <div class="carousel-wbt__thumbnail active" data-filename="0.png">
+              <img src="./images/0-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="broad.jpg">
-              <img src="./images/broad.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="60.png">
+              <img src="./images/60-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="guggenheim.jpg">
-              <img src="./images/guggenheim.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="90.png">
+              <img src="./images/90-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="dabney.jpg">
-              <img src="./images/dabney.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="150.png">
+              <img src="./images/150-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="frizbee.jpg">
-              <img src="./images/frizbee.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="210.png">
+              <img src="./images/210-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
-            <div class="carousel-wbt__thumbnail" data-filename="palms.jpg">
-              <img src="./images/palms.jpg" class="carousel-wbt__thumbnail-image" />
+            <div class="carousel-wbt__thumbnail" data-filename="270.png">
+              <img src="./images/270-thumbnail.png" class="carousel-wbt__thumbnail-image" />
+            </div>
+            <div class="carousel-wbt__thumbnail" data-filename="330.png">
+              <img src="./images/330-thumbnail.png" class="carousel-wbt__thumbnail-image" />
             </div>
           </div>
 
@@ -63,7 +69,8 @@
           </div>
           <div class="carousel-wbt__thumbnails__carousel-control carousel-wbt__thumbnails__carousel-control--right js-cwbt-control-right">
             <img class="carousel-wbt__thumbnails__carousel-control__icon" src="./images/icon-chevron-right.png">
-         </div>     
+          </div>
+        </div>
        </div>
     </div>
 
