--- a/article-with-bg-images/index.html
+++ b/article-with-bg-images/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <div id="page1" class="bgimg">
+    <div id="page1" class="bgimg current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
       <div class="bgimg__text p-4 m-auto">
         <h1>Example of Photo Journalism</h1>
         <h2 class="bgimg__title mb-2 mb-md-3">First Page</h2>
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div id="page2" class="bgimg">
+    <div id="page2" class="bgimg" data-bgimg="images/patrick-baum-202786-unsplash.jpg">
       <div class="bgimg__text p-4 m-auto">
         <h2 class="bgimg__title mb-2 mb-md-3">Second Page</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div id="page3" class="bgimg">
+    <div id="page3" class="bgimg" data-bgimg="images/marcus-cramer-415760-unsplash.jpg">
       <div class="bgimg__text p-4 m-auto">
         <h2 class="bgimg__title mb-2 mb-md-3">Third Page</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -85,16 +85,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script>
-      jQuery(window).scroll(function(){
-        var fromTopPx = 200; // distance to trigger
-        var scrolledFromtop = jQuery(window).scrollTop();
-        if (scrolledFromtop > fromTopPx) {
-          jQuery('body').addClass('scrolled');
-        } else{
-          jQuery('body').removeClass('scrolled');
-        }
-      });
-     </script>
+    <script src="backgrounds.js"></script>
   </body>
 </html>
