Got 'image change when reverse scrolling' working but I don't like where the transition happens. I need to figure out how to align the text vertically so that I can still use 'the top of the div' as the demarcaion in my JavaScript

--- a/article-with-bg-images/index.html
+++ b/article-with-bg-images/index.html
@@ -14,9 +14,10 @@
   <body>
 
     <div id="page1" class="bgimg current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
-      <div class="bgimg__text p-4 m-auto">
-        <h1>Example of Photo Journalism</h1>
-        <h2 class="bgimg__title mb-2 mb-md-3">First Page</h2>
+      <h1 class="page-title">Example of Photo Journalism</h1>
+
+      <div class="bgimg__text d-flex flex-column p-4 m-auto">
+        <h2 class="bgimg__title my-2 my-md-5">First Page</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
           do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
@@ -37,8 +38,8 @@
     </div>
 
     <div id="page2" class="bgimg" data-bgimg="images/patrick-baum-202786-unsplash.jpg">
-      <div class="bgimg__text p-4 m-auto">
-        <h2 class="bgimg__title mb-2 mb-md-3">Second Page</h2>
+      <div class="bgimg__text d-flex flex-column p-4 m-auto">
+        <h2 class="bgimg__title my-2 my-md-5">Second Page</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
           do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
@@ -59,8 +60,8 @@
     </div>
 
     <div id="page3" class="bgimg" data-bgimg="images/marcus-cramer-415760-unsplash.jpg">
-      <div class="bgimg__text p-4 m-auto">
-        <h2 class="bgimg__title mb-2 mb-md-3">Third Page</h2>
+      <div class="bgimg__text d-flex flex-column p-4 m-auto">
+        <h2 class="bgimg__title my-2 my-md-5">Third Page</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
           do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
