Adjusted scrolling so the image changes when the text (after the section title) starts to show

--- a/article-with-bg-images/index.html
+++ b/article-with-bg-images/index.html
@@ -13,71 +13,79 @@
   </head>
   <body>
 
-    <div id="page1" class="bgimg current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
+    <div id="page0" class="bgimg current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
       <h1 class="page-title">Example of Photo Journalism</h1>
-
-      <div class="bgimg__text d-flex flex-column p-4 m-auto">
-        <h2 class="bgimg__title my-2 my-md-5">First Page</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-          do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
-          nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
-          dignissim convallis aenean. In nulla posuere sollicitudin
-          aliquam ultrices sagittis orci. Diam sit amet nisl
-          suscipit. Dolor sit amet consectetur adipiscing elit duis
-          tristique.
-        </p>
-        <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
-          aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
-          pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
-          vel eros donec ac odio tempor orci. Integer malesuada nunc vel
-          risus commodo. Eget egestas purus viverra accumsan in nisl
-          nisi.
-        </p>
-      </div>
     </div>
 
+    <div id="page1" class="bgimg" data-bgimg="images/pop-zebra-333443-unsplash.jpg">
+      <div class="bgimg__content d-flex flex-column p-4 m-auto">
+        <h2 class="bgimg__title my-2 my-md-5">First Page</h2>
+        <div class="bgimg__text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
+            nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
+            dignissim convallis aenean. In nulla posuere sollicitudin
+            aliquam ultrices sagittis orci. Diam sit amet nisl
+            suscipit. Dolor sit amet consectetur adipiscing elit duis
+            tristique.
+          </p>
+          <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
+            aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
+            pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
+            vel eros donec ac odio tempor orci. Integer malesuada nunc vel
+            risus commodo. Eget egestas purus viverra accumsan in nisl
+            nisi.
+          </p>
+        </div>
+      </div>
+    </div>
+    
     <div id="page2" class="bgimg" data-bgimg="images/patrick-baum-202786-unsplash.jpg">
-      <div class="bgimg__text d-flex flex-column p-4 m-auto">
+      <div class="bgimg__content d-flex flex-column p-4 m-auto">
         <h2 class="bgimg__title my-2 my-md-5">Second Page</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-          do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
-          nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
-          dignissim convallis aenean. In nulla posuere sollicitudin
-          aliquam ultrices sagittis orci. Diam sit amet nisl
-          suscipit. Dolor sit amet consectetur adipiscing elit duis
-          tristique.
-        </p>
-        <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
-          aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
-          pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
-          vel eros donec ac odio tempor orci. Integer malesuada nunc vel
-          risus commodo. Eget egestas purus viverra accumsan in nisl
-          nisi.
-        </p>
+        <div class="bgimg__text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
+            nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
+            dignissim convallis aenean. In nulla posuere sollicitudin
+            aliquam ultrices sagittis orci. Diam sit amet nisl
+            suscipit. Dolor sit amet consectetur adipiscing elit duis
+            tristique.
+          </p>
+          <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
+            aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
+            pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
+            vel eros donec ac odio tempor orci. Integer malesuada nunc vel
+            risus commodo. Eget egestas purus viverra accumsan in nisl
+            nisi.
+          </p>
+        </div>
       </div>
     </div>
 
     <div id="page3" class="bgimg" data-bgimg="images/marcus-cramer-415760-unsplash.jpg">
-      <div class="bgimg__text d-flex flex-column p-4 m-auto">
+      <div class="bgimg__content d-flex flex-column p-4 m-auto">
         <h2 class="bgimg__title my-2 my-md-5">Third Page</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-          do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
-          nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
-          dignissim convallis aenean. In nulla posuere sollicitudin
-          aliquam ultrices sagittis orci. Diam sit amet nisl
-          suscipit. Dolor sit amet consectetur adipiscing elit duis
-          tristique.
-        </p>
-        <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
-          aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
-          pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
-          vel eros donec ac odio tempor orci. Integer malesuada nunc vel
-          risus commodo. Eget egestas purus viverra accumsan in nisl
-          nisi.
-        </p>
+        <div class="bgimg__text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
+            nibh tortor id aliquet lectus proin nibh. Arcu ac tortor
+            dignissim convallis aenean. In nulla posuere sollicitudin
+            aliquam ultrices sagittis orci. Diam sit amet nisl
+            suscipit. Dolor sit amet consectetur adipiscing elit duis
+            tristique.
+          </p>
+          <p>Velit sed ullamcorper morbi tincidunt. Id nibh tortor id
+            aliquet. Nec tincidunt praesent semper feugiat nibh. Mattis
+            pellentesque id nibh tortor id aliquet lectus proin nibh. Quis
+            vel eros donec ac odio tempor orci. Integer malesuada nunc vel
+            risus commodo. Eget egestas purus viverra accumsan in nisl
+            nisi.
+          </p>
+        </div>
       </div>
     </div>
 
