changed main class name because the chunks are really pages - bgimg is incidental

--- a/article-with-bg-images/index.html
+++ b/article-with-bg-images/index.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <div class="pages">
-      <div id="page0" class="bgimg current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
+      <div id="page0" class="page current" data-bgimg="images/karsten-wurth-inf1783-189683-unsplash.jpg">
         <h1 class="title">Example of Photo Journalism</h1>
       </div>
 
-      <div id="page1" class="bgimg" data-bgimg="images/pop-zebra-333443-unsplash.jpg">
-        <div class="bgimg__content d-flex flex-column p-4">
-          <h2 class="bgimg__title">First Page</h2>
-          <div class="bgimg__text">
+      <div id="page1" class="page" data-bgimg="images/pop-zebra-333443-unsplash.jpg">
+        <div class="page__content d-flex flex-column p-4">
+          <h2 class="page__title">First Page</h2>
+          <div class="page__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
               do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
@@ -41,10 +41,10 @@
         </div>
       </div>
 
-      <div id="page2" class="bgimg" data-bgimg="images/patrick-baum-202786-unsplash.jpg">
-        <div class="bgimg__content d-flex flex-column p-4">
-          <h2 class="bgimg__title">Second Page</h2>
-          <div class="bgimg__text">
+      <div id="page2" class="page" data-bgimg="images/patrick-baum-202786-unsplash.jpg">
+        <div class="page__content d-flex flex-column p-4">
+          <h2 class="page__title">Second Page</h2>
+          <div class="page__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
               do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
@@ -65,10 +65,10 @@
         </div>
       </div>
 
-      <div id="page3" class="bgimg" data-bgimg="images/marcus-cramer-415760-unsplash.jpg">
-        <div class="bgimg__content d-flex flex-column p-4">
-          <h2 class="bgimg__title">Third Page</h2>
-          <div class="bgimg__text">
+      <div id="page3" class="page" data-bgimg="images/marcus-cramer-415760-unsplash.jpg">
+        <div class="page__content d-flex flex-column p-4">
+          <h2 class="page__title">Third Page</h2>
+          <div class="page__text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
               do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Mauris sit amet massa vitae. Mattis pellentesque id
